BE/Aucation/src/main/java/com/example/aucation/common/error/JwtException.java
package com.example.aucation.common.error;

public class JwtException extends ApplicationException {

    public JwtException(ApplicationError error) {
        super(error);
    }
}
